deploy/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto-prueba-deployment
  labels:
    app: proyecto-prueba
spec:
  replicas: 3
  selector:
    matchLabels:
      app: proyecto-prueba
  template:
    metadata:
      labels:
        app: proyecto-prueba
    spec:
      containers:
      - name: proyecto-prueba
        image: ghcr.io/cerveza-tropical/proyecto-prueba:v1.0.1
        ports:
        - containerPort: 5000
