deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: proyecto-xxxx
  spec:
    rules:
    - host: caixabank.es
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proyecto-prueba
              port:
                number: 80
